--- a/albums/package.json
+++ b/albums/package.json
@@ -7,9 +7,11 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"axios": "^0.16.2",
 		"eslint-plugin-import": "^1.16.0",
 		"eslint-plugin-jsx-a11y": "^2.2.3",
 		"eslint-plugin-react": "^6.10.3",
+		"jquery": "^3.2.1",
 		"react": "16.0.0-alpha.12",
 		"react-native": "0.47.0"
 	},
